--- a/header-styles.css
+++ b/header-styles.css
@@ -1,119 +1,208 @@
-.header{
+.main-header {
+  width: 100%;
+  display: flex;
+}
+
+#logo-header {
+  width: 20%;
+}
+
+#logo-header-img {
+  width: 40%;
+  height: 70%;
+  padding-left: 25%;
+  padding-top: 5%;
+}
+
+#links-header {
+  width: 10%;
+}
+
+.fa-brands {
+  font-size: 100%;
+  padding-left: 5%;
+  padding-top: 60%;
+  color: red;
+}
+
+#slogan-header {
+  width: 30%;
+}
+
+#header-slogan {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: lighter;
+  font-size: 130%;
+  padding-top: 16%;
+  padding-left: 10%;
+}
+
+#opening-times {
+  padding-left: 60%;
+  font-weight: lighter;
+}
+
+#times-header {
+  width: 20%;
+  display: flex;
+  padding-left: 5%;
+}
+
+#sales-and-advice-header {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: lighter;
+  font-size: 125%;
+  padding-top: 24.5%;
+  padding-right: 5%;
+}
+
+#phone-number-header {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 130%;
+  padding-top: 30%;
+  color: red;
+  text-decoration: none;
+  height: 5%;
+}
+
+#contact-header {
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+}
+
+#header-button {
+  background-color: red;
+  width: 55%;
+  height: 25%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 110%;
+  text-decoration: none;
+  text-align: center;
+  justify-content: center;
+  margin: 0 auto;
+  display: flex;
+  margin-top: 5%;
+}
+
+#header-button-arrow {
+  padding-top: 7.5%;
+  padding-left: 10%;
+  color: white;
+  font-size: 125%;
+}
+
+#header-button-text {
+  color: white;
+  margin: 0 auto;
+  padding-top: 7%;
+}
+
+#email-header {
+  padding-top: 12%;
+  padding-left: 5%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 300;
+  font-size: 120%;
+  text-decoration: none;
+  color: red;
+}
+
+#header-line {
+  width: 100%;
+  height: 1px;
+  background-color: black;
+}
+
+.secondary-header {
+  width: 100%;
+  display: flex;
+  position: relative;
+}
+
+.dropdown-container {
+  width: 20%;
+  text-align: center;
+  padding-top: 1%;
+  padding-bottom: 1%;
+}
+
+.quote-container {
+  width: 20%;
+  text-align: center;
+  padding-top: 1%;
+}
+
+.dropdown-title {
+  color: black;
+  font-size: 150%;
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: none;
+}
+
+.dropdown-list {
+  display: none;
+  position: absolute;
+}
+
+.dropdown-list a {
+  display: block;
+  padding-top: 5%;
+  text-decoration: none;
+  color: black;
+  font-size: 125%;
+  font-family: arial;
+}
+
+.dropdown-container:hover {
+  padding-bottom: 1%;
+}
+
+.dropdown-container:hover .dropdown-title {
+  color: red;
+}
+
+.dropdown-container:hover .dropdown-list {
+  display: block;
+  margin-top: 1%;
+  background-color: lightgrey;
+  width: 20%;
+  text-align: center;
+}
+
+.quote-button {
+  text-decoration: none;
+  font-size: 150%;
+  color: red;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 5%;
+}
+
+.quote-button:hover {
+  color: white;
+  background-color: red;
+}
+
+.third-header {
     width: 100%;
-    display: flex;
-}
-
-#logo-header{
-    width: 20%;
-}
-
-#logo-header-img{
-    width: 40%;
-    height: 70%;
-    padding-left: 25%;
-    padding-top: 5%;
-}
-
-#links-header{
-    width: 10%;
-}
-
-.fa-brands{
-    font-size: 100%;
-    padding-left: 5%;
-    padding-top: 60%;
-    color: red;
-
-}
-
-#slogan-header{
-    width: 30%
-}
-
-#header-slogan{
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: lighter;
-    font-size: 130%;
-    padding-top: 16%;
-    padding-left: 10%;
-}
-
-#opening-times{
-    padding-left: 60%;
-    font-weight: lighter;
-}
-
-#times-header{
-    width: 20%;
-    display: flex;
-    padding-left: 5%;
-}
-
-#sales-and-advice-header{
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: lighter;
-    font-size: 125%;
-    padding-top: 24.5%;
-    padding-right: 5%;
-}
-
-#phone-number-header{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 130%;
-    padding-top: 30%;
-    color: red;
-    text-decoration: none;
-    height: 5%;
-}
-
-
-#contact-header{
-    width: 20%;
-    display: flex;
-    flex-direction: column;
-}
-
-#header-button{
     background-color: red;
-    width: 55%;
-    height: 25%;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 110%;
-    text-decoration: none;
-    text-align: center;
-    justify-content: center;
-    margin: 0 auto;
-    display: flex;
-    margin-top: 5%;
 }
 
-#header-button-arrow{
-    padding-top: 7.5%;
-    padding-left: 10%;
-    color: white;
-    font-size: 125%;
-
+#fact-bar {
+  width: 100%;
+  background-color: red;
+  height: 50;
+  display: flex;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 80%;
+  color: white;
 }
 
-#header-button-text{
-    color: white;
-    margin: 0 auto;
-    padding-top: 7%;
+.fact-bar-headers{
+    width: 20%;
+    text-align: center;;
 }
 
-#email-header{
-    padding-top: 12%;
-    padding-left: 5%;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 300;
-    font-size: 120%;
-    text-decoration: none;
-    color: red;
-
-}
-
-#header-line{
-    width: 100%;
-    height: 1px;
-    background-color: black;
+#first-header{
+    margin-left: 10%;
 }
