--- a/header-styles.css
+++ b/header-styles.css
@@ -1,15 +1,15 @@
 .main-header {
-  width: 100%;
+  width: 100vw;
   display: flex;
 }
 
 #logo-header {
-  width: 20%;
+  width: 20vw;
 }
 
 #logo-header-img {
-  width: 40%;
-  height: 70%;
+  width: 7.5vw;
+  height: auto;
   padding-left: 25%;
   padding-top: 5%;
 }
@@ -143,11 +143,12 @@
 .dropdown-list {
   display: none;
   position: absolute;
+  padding-bottom: 1%;
 }
 
 .dropdown-list a {
   display: block;
-  padding-top: 5%;
+  padding-top: 10%;
   text-decoration: none;
   color: black;
   font-size: 125%;
@@ -184,7 +185,7 @@
 }
 
 .third-header {
-    width: 100%;
+    width: 100vw;
     background-color: red;
 }
 
@@ -205,4 +206,163 @@
 
 #first-header{
     margin-left: 10%;
+}
+
+@media screen and (max-width: 1024px){
+  #logo-header-img {
+  width: 15vw;
+  height: auto;
+  padding-left: 10%;
+  padding-top: 5%;
+  padding-bottom: 2%;
+}
+
+#links-header {
+  display: none;
+}
+
+#slogan-header {
+  width: 30%;
+  padding-left: 10%;
+}
+
+#header-slogan {
+  font-size: 130%;
+  padding-top: 10%;
+  padding-left: 0%;
+}
+
+#opening-times {
+  padding-left: 1%;
+  font-weight: lighter;
+}
+
+#times-header {
+  display: none;
+}
+
+#contact-header {
+  padding-top: 1%;
+  padding-left: 12%;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+}
+
+#header-button {
+  background-color: red;
+  width: 55%;
+  height: 35%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 110%;
+  text-decoration: none;
+  text-align: center;
+  justify-content: center;
+  margin: 0 auto;
+  display: flex;
+  margin-top: 5%;
+}
+
+#email-header {
+  padding-right: 5%;
+}
+
+.secondary-header {
+  padding-bottom: 1%;
+}
+
+.dropdown-container:hover .dropdown-list {
+  margin-top: 1.8%;
+  padding-bottom: 2%;
+}
+
+#fact-bar {
+  width: 90%;
+  justify-content: space-evenly;
+}
+
+#first-header{
+    margin-left: 12%;
+}
+}
+
+@media screen and (max-width: 820px){
+  #logo-header-img {
+  width: 15vw;
+  height: auto;
+  padding-left: 10%;
+  padding-top: 10%;
+}
+
+#slogan-header {
+  width: 35%;
+  padding-left: 10%;
+}
+
+#header-slogan {
+  padding-top: 5%;
+}
+
+#contact-header {
+  padding-top: 0%;
+  padding-left: 2%;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+
+#header-button{
+  height: 30%;
+}
+
+.dropdown-title {
+  font-size: 120%;
+}
+
+.quote-button {
+  font-size: 120%;
+}
+
+.dropdown-list a {
+  font-size: 100%;
+  padding-top: 15%;
+}
+
+#fact-bar {
+  width: 100%;
+  font-size: 70%;
+  justify-content: space-evenly;
+}
+
+#first-header{
+    margin-left: 1%;
+}
+}
+
+@media screen and (max-width: 768px){
+  #email-header {
+  font-size: 110%;
+}
+}
+
+@media screen and (max-width: 430px){
+  #slogan-header {
+  display: none;
+}
+
+#contact-header {
+  display: none;
+}
+
+hr{
+  display: none;
+}
+
+.secondary-header {
+  display: none;
+}
+
+.third-header{
+  display: none;
+}
 }
