--- a/header-styles.css
+++ b/header-styles.css
@@ -1,3 +1,13 @@
+header{
+  position: fixed;
+  background-color: white;
+  top: 0;
+  z-index: 1000;
+}
+
+header.scrolled .third-header{
+  display: none;
+}
 .main-header {
   width: 100vw;
   display: flex;
