this is a test to see if pixel sizes for badge work better on ipad pro

--- a/styles/hero-styles.css
+++ b/styles/hero-styles.css
@@ -67,9 +67,9 @@
   }
 
   #years-badge {
-    width: 70%;
-    margin-top: 20%;
-    padding-left: 115%;
+    width: 200px;
+    padding-left: 800px;
+    padding-top: 107px;
   }
 }
 
