the pixel sizes for badge worked good for ipad so changing the titles the same

--- a/styles/hero-styles.css
+++ b/styles/hero-styles.css
@@ -57,7 +57,7 @@
   }
 
   #hero-text-welcome {
-    padding-top: 100%;
+    padding-top: 200px;
     padding-left: 25%;
   }
 
@@ -67,8 +67,8 @@
   }
 
   #years-badge {
-    width: 200px;
-    padding-left: 800px;
+    width: 300px;
+    padding-left: 700px;
     padding-top: 107px;
   }
 }
