removed some files and added the second section - not finished yet - need to add overlay text with links and then styles

--- a/styles/header-styles.css
+++ b/styles/header-styles.css
@@ -81,7 +81,7 @@ header.scrolled .third-header{
   flex-direction: column;
 }
 
-#header-button {
+.header-button {
   background-color: red;
   width: 55%;
   height: 35%;
@@ -176,9 +176,13 @@ header.scrolled .third-header{
 .dropdown-container:hover .dropdown-list {
   display: block;
   margin-top: 1%;
-  background-color: lightgrey;
+  background-color: rgba(211, 211, 211, 0.937);
   width: 20%;
   text-align: center;
+}
+
+.dropdown-list a:hover {
+  color: red
 }
 
 .quote-button {
