--- a/styles/hero-styles.css
+++ b/styles/hero-styles.css
@@ -39,6 +39,7 @@
   font-family: Arial, Helvetica, sans-serif;
   padding-top: 22%;
   padding-left: 13%;
+  margin-bottom: 0%;
   width: 80%;
   font-size: 550%;
   color: white;
@@ -49,6 +50,83 @@
   width: 75%;
   padding-left: 250%;
 }
+
+.design-door-container{
+  width: 40%;
+  height: 300px;
+  background-color: red;
+  display: flex;
+  margin-top: 660px;
+  margin-left: 1100px;
+}
+
+#design-door-image{
+  object-fit: fill;
+}
+
+.designer-door-title{
+  width: 50%;
+  background-color: white;
+}
+
+.designer-door-image-container{
+  width: 50%;
+  overflow: hidden;
+}
+
+#design-title{
+  font-size: 225%;
+  color: black;
+  padding-left: 12%;
+  padding-top: 15%;
+}
+
+#design-link-text{
+  color: black;
+  font-size: 150%;
+  padding-left: 12%;
+  padding-top: 15%;
+}
+
+.fa-arrow-right{
+  color: white;
+  padding-left: 1%;
+  padding-top: 5%;
+}
+
+#hero-button{
+  width: 55%;
+  background-color: red;
+  margin-left: 20%;
+  padding: 1% 4%;
+  text-decoration: none;
+  color: white;
+  font-size: 110%;
+}
+
+.design-door-hero{
+  width: 100%;
+  height: 200px;
+  background-color: white;
+  display: flex;
+  margin-top: 760px;
+  margin-left: 200%;
+}
+
+.design-door-hero-title{
+  width: 50%;
+}
+
+.design-door-hero-image{
+  width: 50%;
+}
+
+#door-image{
+  width: 100%;
+  height: 100%;
+}
+
+
 
 @media screen and (max-width: 1024px) {
   .hero-image {
