--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -2,3 +2,17 @@ body {
     margin: 0;
     padding: 0;
 }
+h1{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h3{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+a{
+    font-family: Arial, Helvetica, sans-serif;
+}
+p{
+    font-family: Arial, Helvetica, sans-serif;
+}
