--- a/styles/hero-styles.css
+++ b/styles/hero-styles.css
@@ -135,8 +135,8 @@
   }
 
   #hero-text-welcome {
-    padding-top: 400px;
-    padding-left: 25%;
+    padding-top: 95%;
+    padding-left: 30%;
   }
 
   #hero-text-about {
@@ -154,8 +154,13 @@
 @media screen and (max-width: 820px) {
   #years-badge {
     width: 50%;
-    margin-top: 22%;
+    margin-top: 4%;
     padding-left: 100%;
+  }
+
+    #hero-text-welcome {
+    padding-top: 105%;
+    padding-left: 25%;
   }
 
   #hero-text-about {
