--- a/styles/home-page-styles.css
+++ b/styles/home-page-styles.css
@@ -145,7 +145,7 @@
 @media screen and (max-width: 1024px) {
   .container {
     width: 95%;
-    padding-left: 4%;
+    padding-left: 6%;
     margin: 0 auto;
     padding-top: 3%;
   }
@@ -197,7 +197,12 @@
   }
 
   #flush-sash-veka-logo{
-    padding-left: 15%;
+    padding-left: 19.5%;
+  }
+
+  #veka-logo{
+    width: 60%;
+    height: 60%;
   }
 
   .small-div-text {
@@ -232,7 +237,28 @@
   }
 
   #doors-link{
-    margin-left: 7%;
+    margin-left: 12%;
     margin-top: 88%;
+  }
+}
+
+@media screen and (max-width: 820px) {
+  #flush-sash-text{
+    margin-top: 130%;
+  }
+
+  #flush-sash-link{
+    width: 75%;
+    margin-top: 156%;
+    margin-left: 5%;
+    font-size: 90%;
+  }
+
+  .small-div-text{
+    font-size: 90%;
+  }
+
+  .small-div-link{
+    width: 25%;
   }
 }
