changed some styles for ipad pro and ipad air and also moved some unwanted text which shown up behind the hero

--- a/styles/home-page-styles.css
+++ b/styles/home-page-styles.css
@@ -243,6 +243,12 @@
 }
 
 @media screen and (max-width: 820px) {
+
+  #hero-text-welcome {
+    padding-left: 30%;
+    padding-top: 25%;
+  }
+
   #flush-sash-text{
     margin-top: 130%;
   }
