--- a/styles/hero-styles.css
+++ b/styles/hero-styles.css
@@ -135,7 +135,7 @@
   }
 
   #hero-text-welcome {
-    padding-left: 30%;
+    padding-left: 20%;
     padding-top: 65%;
   }
 
@@ -153,13 +153,13 @@
 
 @media screen and (max-width: 820px) {
   #years-badge {
-    width: 50%;
-    margin-top: 13%;
-    padding-left: 100%;
+    width: 20%;
+    margin-top: 10%;
+    margin-right: 15%;
   }
 
     #hero-text-welcome {
-    padding-top: 105%;
+    padding-top: 175%;
     padding-left: 25%;
   }
 
