--- a/styles/hero-styles.css
+++ b/styles/hero-styles.css
@@ -153,13 +153,13 @@
 
 @media screen and (max-width: 820px) {
   #years-badge {
-    width: 20%;
-    margin-top: 10%;
-    margin-right: 15%;
+    width: 40%;
+    margin-top: 13%;
+    padding-left: 110%;
   }
 
     #hero-text-welcome {
-    padding-top: 200%;
+    padding-top: 100%;
     padding-left: 25%;
   }
 
