--- a/styles/hero-styles.css
+++ b/styles/hero-styles.css
@@ -153,9 +153,10 @@
 
 @media screen and (max-width: 820px) {
   #years-badge {
-    width: 40%;
-    margin-top: 13%;
-    padding-left: 110%;
+    /* display: none; */
+    width: 250px;
+    padding-left: 550px;
+    margin-top: 40px;
   }
 
     #hero-text-welcome {
@@ -166,6 +167,11 @@
   #hero-text-about {
     padding-top: 50%;
     font-size: 400%;
+  }
+
+  #hero-button{
+    /* display: none; */
+    margin-top: 15%;
   }
 }
 
