--- a/styles/hero-styles.css
+++ b/styles/hero-styles.css
@@ -49,6 +49,7 @@
 #years-badge {
   width: 75%;
   padding-left: 250%;
+  margin-top: 5%;
 }
 
 .design-door-container{
@@ -136,7 +137,7 @@
 
   #hero-text-welcome {
     padding-left: 20%;
-    padding-top: 65%;
+    padding-top: 68%;
   }
 
   #hero-text-about {
@@ -148,19 +149,19 @@
     width: 300px;
     padding-left: 700px;
     padding-top: 13%;
+    margin-top: 0%;
   }
 }
 
 @media screen and (max-width: 820px) {
   #years-badge {
-    /* display: none; */
     width: 250px;
     padding-left: 550px;
-    margin-top: 40px;
+    margin-top: 6%;
   }
 
     #hero-text-welcome {
-    padding-top: 76%;
+    padding-top: 85%;
     padding-left: 20%;
   }
 
@@ -239,5 +240,17 @@
   #hero-text-about {
     padding-top: 40%;
     font-size: 200%;
+  }
+}
+
+@media only screen and (min-width: 1366px) and (max-width: 1366px) and (orientation: landscape){
+  .hero-image{
+    margin-top: 20%;
+  }
+
+  #years-badge{
+    width: 65%;
+    padding-left: 185%;
+    margin-top: 0.5%;
   }
 }
