--- a/styles/home-page-styles.css
+++ b/styles/home-page-styles.css
@@ -263,3 +263,56 @@
     width: 25%;
   }
 }
+
+/* creating styles for ipad pro landscape */
+
+@media only screen and (min-width: 1366px) and (max-width: 1366px) and (orientation: landscape){
+
+.container{
+  width: 100%;
+  padding-left: 10%;
+}
+
+#flush-sash-text{
+  margin-top: 102%;
+}
+
+#flush-sash-link{
+  margin-top: 106%;
+  margin-left: 20%;
+  width: 20%;
+}
+
+#veka-logo{
+  width: 35%;
+}
+
+.small-div-text{
+  margin-top: 33%;
+  width: 25%;
+}
+
+.small-div-link{
+  margin-top: 34%;
+  width: 15%;
+  font-size: 80%;
+  margin-left: 3%;
+  padding-left: 2%;
+}
+
+#lantern-text{
+  margin-top: 55%;
+}
+
+#lantern-link{
+  margin-top: 59%;
+}
+
+#doors-text{
+  margin-top: 55%;
+}
+
+#doors-link{
+  margin-top: 59%;
+}
+}
