--- a/styles/home-page-styles.css
+++ b/styles/home-page-styles.css
@@ -316,3 +316,64 @@
   margin-top: 59%;
 }
 }
+
+@media only screen and (max-width: 1180px) and (orientation: landscape){
+  
+  .container{
+    width: 100%;
+    padding-left: 10%;
+  }
+
+  #flush-sash-text{
+    margin-top: 100%;
+  }
+
+  #flush-sash-link{ 
+    margin-top: 106%;
+    margin-left: 20%;
+    width: 20%;
+    padding-right: 3%;
+  }
+
+  #veka-logo{
+    width: 30%;
+    height: 50%;
+    padding-top: 5%;
+  }
+
+  .small-div-text{
+    margin-top: 30%;
+    width: 25%;
+  }
+
+  .small-div-link{
+    margin-top: 34%;
+    width: 16.5%;
+    font-size: 80%;
+    margin-left: 3.5%;
+    padding-left: 2%;
+  }
+
+  #lantern-text{
+    margin-top: 55%;
+  }
+
+  #lantern-link{
+    margin-top: 59%;
+  }
+
+  #doors-text{
+    margin-top: 55%;
+  }
+
+  #doors-link{
+    margin-top: 59%;
+  }
+
+  #which-logo{
+    height: 5%;
+  }
+
+
+}
+
