changed some style code and remove min width off some media queries to avoid confusion

--- a/styles/header-styles.css
+++ b/styles/header-styles.css
@@ -404,7 +404,7 @@ hr{
 }
 /* creating styles for ipad landscape only */
 
-@media only screen and (min-width: 1366px) and (max-width: 1366px) and (orientation: landscape){
+@media only screen  and (max-width: 1366px) and (orientation: landscape){
   #logo-header{
     width: 12vw;
   }
