--- a/styles/hero-styles.css
+++ b/styles/hero-styles.css
@@ -243,7 +243,7 @@
   }
 }
 
-@media only screen and (min-width: 1366px) and (max-width: 1366px) and (orientation: landscape){
+@media only screen and (max-width: 1366px) and (orientation: landscape){
   .hero-image{
     margin-top: 20%;
   }
