--- a/styles/home-page-styles.css
+++ b/styles/home-page-styles.css
@@ -266,7 +266,7 @@
 
 /* creating styles for ipad pro landscape */
 
-@media only screen and (min-width: 1366px) and (max-width: 1366px) and (orientation: landscape){
+@media only screen and (max-width: 1366px) and (orientation: landscape){
 
 .container{
   width: 100%;
