--- a/styles/header-styles.css
+++ b/styles/header-styles.css
@@ -416,9 +416,14 @@ hr{
   }
 
   #links-header{
+    display: none;
     width: 6%;
     padding-left: 2%;
     padding-top: 2%;
+  }
+
+  #slogan-header{
+    padding-left: 5%;
   }
 
   .fa-brands{
@@ -430,12 +435,12 @@ hr{
   }
 
   #opening-times{
-    padding-left: 40%;
+    padding-left: 20%;
   }
 
   #times-header{
     width: 22%;
-    padding-left: 2%;
+    padding-left: 4%;
   }
 
   #phone-number-header{
@@ -473,6 +478,7 @@ hr{
   }
 
   #links-header{
+    display: none;
     width: 3%;
     padding-left: 1%;
     padding-top: 0%;
@@ -499,7 +505,7 @@ hr{
   }
 
   #contact-header{
-    width: 26%;
+    width: 30%;
     padding-top: 1%;
   }
 
