--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
 }
 h1{
     font-family: Arial, Helvetica, sans-serif;
