--- a/styles/hero-styles.css
+++ b/styles/hero-styles.css
@@ -203,7 +203,7 @@
   .hero-image {
     margin-top: 18%;
     padding-top: 1%;
-    width: 100%;
+    width: 100vw;
   }
 
   #hero-video {
@@ -213,19 +213,20 @@
 
   #years-badge {
     width: 30%;
-    margin-top: 0.5%;
-    padding-left: 70%;
+    padding-top: 0%;
+    margin-top: 0%;
+    padding-left: 65%;
   }
 
   #hero-text-welcome {
     font-size: smaller;
-    padding-top: 60%;
-    padding-left: 25%;
+    padding-top: 45%;
+    padding-left: 15%;
   }
 
   #hero-text-about {
     padding-top: 35%;
-    font-size: 250%;
+    font-size: 185%;
   }
 }
 
