--- a/styles/home-page-styles.css
+++ b/styles/home-page-styles.css
@@ -420,3 +420,15 @@
 
 }
 
+@media screen and (max-width: 430px) {
+  .container{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .top-divs{
+    display: flex;
+    flex-direction: column;
+  }
+}
+
