--- a/styles/home-page-styles.css
+++ b/styles/home-page-styles.css
@@ -6,10 +6,10 @@
   padding-left: 7.5%;
 }
 
-.section-overlay{
-    width: 40%;
-    position: absolute;
-    display: flex;
+.section-overlay {
+  width: 40%;
+  position: absolute;
+  display: flex;
 }
 
 .large-div {
@@ -67,29 +67,28 @@
   margin-bottom: 5%;
 }
 
-#flush-sash-link{
-    font-family: Arial, Helvetica, sans-serif;
-    text-decoration: none;
-    color: white;
-    font-size: 100%;
-    margin-top: 108%;
-    margin-left: 30%;
-    padding: 0.5%;
-    padding-left: 4%;
-    background-color: red;
-    width: 15%;
-    height: 10%;
+#flush-sash-link {
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: none;
+  color: white;
+  font-size: 100%;
+  margin-top: 108%;
+  margin-left: 30%;
+  padding: 0.5%;
+  padding-left: 4%;
+  background-color: red;
+  width: 15%;
+  height: 10%;
 }
 
-#flush-sash-link:hover{
-    color: red;
-    font-weight: bolder;
-    background-color: white;
+#flush-sash-link:hover {
+  color: red;
+  font-weight: bolder;
+  background-color: white;
 }
 
-
-#flush-sash-veka-logo{
-    padding-left: 22%;
+#flush-sash-veka-logo {
+  padding-left: 22%;
 }
 
 .small-div-text {
@@ -101,45 +100,45 @@
   margin-bottom: 5%;
 }
 
-.small-div-link{
-    font-family: Arial, Helvetica, sans-serif;
-    text-decoration: none;
-    color: white;
-    font-size: 80%;
-    margin-top: 37%;
-    margin-left: 12%;
-    padding: 0.5%;
-    padding-left: 3%;
-    background-color: red;
-    width: 12%;
-    height: 7.5%;
+.small-div-link {
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: none;
+  color: white;
+  font-size: 80%;
+  margin-top: 37%;
+  margin-left: 12%;
+  padding: 0.5%;
+  padding-left: 3%;
+  background-color: red;
+  width: 12%;
+  height: 7.5%;
 }
 
-.small-div-link:hover{
-    color: red;
-    font-weight: bolder;
-    background-color: white;
+.small-div-link:hover {
+  color: red;
+  font-weight: bolder;
+  background-color: white;
 }
 
-#which-logo{
-    width: 40%;
-    margin-left: 80%;
+#which-logo {
+  width: 40%;
+  margin-left: 80%;
 }
 
-#lantern-text{
-    margin-top: 60%;
+#lantern-text {
+  margin-top: 60%;
 }
 
-#lantern-link{
-    margin-top: 61%;
+#lantern-link {
+  margin-top: 61%;
 }
 
-#doors-text{
-    margin-top: 60%;
+#doors-text {
+  margin-top: 60%;
 }
 
-#doors-link{
-    margin-top: 61%;
+#doors-link {
+  margin-top: 61%;
 }
 
 @media screen and (max-width: 1024px) {
@@ -150,7 +149,7 @@
     padding-top: 3%;
   }
 
-  .section-overlay{
+  .section-overlay {
     width: 30%;
   }
 
@@ -163,15 +162,15 @@
     height: 120%;
   }
 
-  .side-divs  {
-    width:52%;
+  .side-divs {
+    width: 52%;
   }
 
-  .top-divs{
+  .top-divs {
     width: 100%;
   }
 
-  #big-image{
+  #big-image {
     width: 100%;
     height: 89%;
   }
@@ -182,11 +181,11 @@
   }
 
   #flush-sash-text {
-  width: 100%;
-  margin-top: 148%;
+    width: 100%;
+    margin-top: 148%;
   }
 
-  #flush-sash-link{
+  #flush-sash-link {
     margin-top: 158%;
     margin-left: 5%;
     padding: 0.5%;
@@ -196,11 +195,11 @@
     height: 10%;
   }
 
-  #flush-sash-veka-logo{
+  #flush-sash-veka-logo {
     padding-left: 19.5%;
   }
 
-  #veka-logo{
+  #veka-logo {
     width: 60%;
     height: 60%;
   }
@@ -211,185 +210,180 @@
     padding-left: 2%;
   }
 
-  .small-div-link{
+  .small-div-link {
     margin-top: 50%;
     width: 22%;
     font-size: 65%;
   }
 
-  #which-logo{
+  #which-logo {
     width: 75%;
     height: 15%;
     margin-left: 155%;
   }
 
-  #lantern-text{
+  #lantern-text {
     margin-top: 80%;
   }
 
-  #lantern-link{
+  #lantern-link {
     margin-top: 88%;
   }
 
-  #doors-text{
+  #doors-text {
     width: 30%;
     margin-top: 81%;
   }
 
-  #doors-link{
+  #doors-link {
     margin-left: 12%;
     margin-top: 88%;
   }
 }
 
 @media screen and (max-width: 820px) {
-
-  #flush-sash-text{
+  #flush-sash-text {
     margin-top: 130%;
   }
 
-  #flush-sash-link{
+  #flush-sash-link {
     width: 75%;
     margin-top: 156%;
     margin-left: 5%;
     font-size: 90%;
   }
 
-  .small-div-text{
+  .small-div-text {
     font-size: 90%;
   }
 
-  .small-div-link{
+  .small-div-link {
     width: 25%;
   }
 }
 
 /* creating styles for ipad pro landscape */
 
-@media only screen and (max-width: 1366px) and (orientation: landscape){
+@media only screen and (max-width: 1366px) and (orientation: landscape) {
+  .container {
+    width: 99vw;
+    padding-left: 1.5%;
+  }
 
-.container{
-  width: 99vw;
-  padding-left: 1.5%;
+  .section-overlay {
+    width: 100%;
+    position: absolute;
+  }
+
+  .large-div {
+    width: 43%;
+    position: relative;
+    display: inline-block;
+  }
+
+  .side-divs {
+    width: 55%;
+    position: relative;
+    display: inline-block;
+  }
+
+  .small-div {
+    width: 100%;
+    position: relative;
+    display: inline-block;
+  }
+
+  #flush-sash-text {
+    width: 50%;
+    font-size: 200%;
+    margin-top: 115%;
+  }
+
+  #flush-sash-link {
+    margin-top: 120%;
+    margin-left: 10%;
+    padding-right: 1%;
+    width: 25%;
+    font-size: 140%;
+  }
+
+  #flush-sash-veka-logo {
+    padding-left: 0%;
+  }
+  #veka-logo {
+    width: 40%;
+    padding-left: 60%;
+  }
+
+  .small-div-text {
+    margin-top: 60%;
+    width: 50%;
+    font-size: 140%;
+  }
+
+  .small-div-link {
+    margin-top: 68%;
+    width: 30%;
+    font-size: 95%;
+    margin-left: 8%;
+    padding-left: 4%;
+  }
+
+  #which-logo {
+    margin-left: 60%;
+  }
+
+  #lantern-text {
+    margin-top: 110%;
+    padding-left: 3%;
+  }
+
+  #lantern-link {
+    margin-top: 120%;
+  }
+
+  #doors-text {
+    margin-top: 110%;
+  }
+
+  #doors-link {
+    margin-top: 120%;
+  }
 }
 
-.section-overlay{
-  width: 100%;
-  position: absolute;
-}
-
-.large-div{
-  width: 43%;
-  position: relative;
-  display: inline-block;
-}
-
-.side-divs{
-  width: 55%;
-  position: relative;
-  display: inline-block;
-}
-
-.small-div{
-  width: 100%;
-  position: relative;
-  display: inline-block;
-}
-
-
-#flush-sash-text{
-  width: 50%;
-  font-size: 200%;
-  margin-top: 115%;
-}
-
-#flush-sash-link{
-  margin-top: 120%;
-  margin-left: 10%;
-  padding-right: 1%;
-  width: 25%;
-  font-size: 140%;
-}
-
-#flush-sash-veka-logo{
-  padding-left: 0%;
-}
-#veka-logo{
-  width: 40%;
-  padding-left: 60%;
-}
-
-.small-div-text{
-  margin-top: 60%;
-  width: 50%;
-  font-size: 140%;
-}
-
-.small-div-link{
-  margin-top: 68%;
-  width: 30%;
-  font-size: 95%;
-  margin-left: 8%;
-  padding-left: 4%;
-}
-
-#which-logo{
-  margin-left: 60%;
-}
-
-#lantern-text{
-  margin-top: 110%;
-  padding-left: 3%;
-}
-
-#lantern-link{
-  margin-top: 120%;
-}
-
-#doors-text{
-  margin-top: 110%;
-}
-
-#doors-link{
-  margin-top: 120%;
-}
-
-}
-
-@media only screen and (max-width: 1180px) and (orientation: landscape){
-  
-  .container{
+@media only screen and (max-width: 1180px) and (orientation: landscape) {
+  .container {
     width: 100%;
     padding-left: 10%;
   }
 
-  .section-overlay{
+  .section-overlay {
     object-fit: contain;
   }
 
-  #flush-sash-text{
+  #flush-sash-text {
     margin-top: 100%;
   }
 
-  #flush-sash-link{ 
+  #flush-sash-link {
     margin-top: 106%;
     margin-left: 20%;
     width: 20%;
     padding-right: 3%;
   }
 
-  #veka-logo{
+  #veka-logo {
     width: 30%;
     height: 50%;
     padding-top: 5%;
   }
 
-  .small-div-text{
+  .small-div-text {
     margin-top: 30%;
     width: 25%;
   }
 
-  .small-div-link{
+  .small-div-link {
     margin-top: 34%;
     width: 16.5%;
     font-size: 80%;
@@ -397,38 +391,133 @@
     padding-left: 2%;
   }
 
-  #lantern-text{
+  #lantern-text {
     margin-top: 55%;
   }
 
-  #lantern-link{
+  #lantern-link {
     margin-top: 59%;
   }
 
-  #doors-text{
+  #doors-text {
     margin-top: 55%;
   }
 
-  #doors-link{
+  #doors-link {
     margin-top: 59%;
   }
 
-  #which-logo{
+  #which-logo {
     height: 5%;
   }
-
-
 }
 
 @media screen and (max-width: 430px) {
-  .container{
+  .container {
+    width: 430px;
+    display: flex;
+    flex-direction: column;
+    padding-left: 0%;
+  }
+
+  .section-overlay {
+    width: 100%;
+    height: 100%;
+  }
+
+  #flush-sash-text{
+    width: 40%;
+    margin-top: 130%;
+    font-size: 125%;
+    padding-left: 5%;
+  }
+
+  #flush-sash-link{
+    text-align: center;
+    margin-top: 132.5%;
+    margin-left: 17.5%;
+    width: 25%;
+    height: 3%;
+    padding: 1%;
+    }
+
+      #flush-sash-veka-logo{
+    padding-left: 0%;
+  }
+
+    #veka-logo{
+      width: 35%;
+      height: 25%;
+      padding-left: 60%;
+    }
+
+  .large-div {
+    width: 100%;
+    /* height: 600px; */
+    position: relative;
+    display: inline-block;
+  }
+
+  #big-image {
+    width: 100%;
+  }
+
+  .side-divs{
+    width: 100%;
+  }
+
+  .small-div{
+    margin-left: 0%;
+    width: 100%;
+  }
+
+  .top-divs {
     display: flex;
     flex-direction: column;
   }
 
-  .top-divs{
-    display: flex;
-    flex-direction: column;
+  .small-div-text{
+    width: 30%;
+    font-size: 125%;
+    padding-left: 5%;
+    margin-top: 65%;
   }
+
+  .small-div-link{
+    text-align: center;
+    width: 25%;
+    height: 2%;
+    padding: 1%;
+    font-size: 90%;
+    margin-top: 67.5%;
+    margin-left: 27.5%;
+  }
+
+
+
+  #which-logo{
+    margin-left: 67.5%;
+    margin-top: 1%;
+    width: 25%;
+    height: 5%;
+  }
+
+  #lantern-text{
+    margin-top: 115%;
+  }
+
+  #lantern-link{
+    margin-top: 117.5%;
+  }
+
+  #doors-text{
+    margin-top: 115%;
+  }   
+
+  #doors-link{
+    margin-top: 117.5%;
+    margin-left: 25%;
+  }
+
+
 }
-
