updated styles for home page on iphone

--- a/styles/home-page-styles.css
+++ b/styles/home-page-styles.css
@@ -521,3 +521,13 @@
 
 
 }
+
+@media screen and (max-width: 390px) {
+  .container{
+    width: 100vw;
+  }
+
+  .small-div-text{
+    margin-top: 60%;
+  }
+}
